--- a/non-distribution/package.json
+++ b/non-distribution/package.json
@@ -2,9 +2,9 @@
   "name": "cs1380:m0",
   "version": "1.0.0",
   "author": {
-    "name": "<first last?>",
-    "email": "<email@brown.edu?>",
-    "cslogin": "<cslogin?>"
+    "name": "<Tianchi Huang>",
+    "email": "<tianchi_huang@brown.edu?>",
+    "cslogin": "<thuang80>"
   },
   "description": "A set of components for cs1380's search engine.",
   "dependencies": {
@@ -24,18 +24,20 @@
     "jest": "^29.7.0"
   },
   "report": {
-    "hours": 999,
-    "loc": 999,
+    "hours": 10,
+    "jsloc": 180,
+    "sloc": 20,
     "dev": {
-      "cpu-no": 999,
-      "mem-gb": 999,
-      "ssd-gb": 999
+      "cpu-no": 8,
+      "mem-gb": 8,
+      "ssd-gb": 500
     },
+    "sandbox/corpora": 1,
     "throughput": {
-      "dev": [],
-      "aws": [],
+      "dev": [0.502, 0.502, 3.52],
+      "aws": [0.181, 0.181, 1.05],
       "gs": []
     },
-    "dloc": -99
+    "dloc": 3000
   }
 }
