--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.6",
   "description": "A library for building distributed systems.",
   "main": "distribution.js",
-  "useLibrary": true,
+  "useLibrary": false,
   "directories": {
     "test": "test"
   },
@@ -22,8 +22,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "yargs": "^17.7.2",
-    "@brown-ds/distribution": "latest"
+    "@brown-ds/distribution": "^0.1.7",
+    "yargs": "^17.7.2"
   },
   "report": {
     "hours": 999,
