--- a/package.json
+++ b/package.json
@@ -26,20 +26,20 @@
     "yargs": "^17.7.2"
   },
   "report": {
-    "hours": 999,
-    "loc": 999,
+    "hours": 10,
+    "loc": 150,
     "dev": {
-      "cpu-no": 999,
-      "mem-gb": 999,
-      "ssd-gb": 999
+      "cpu-no": 8,
+      "mem-gb": 8,
+      "ssd-gb": 500
     },
     "throughput": {
       "dev": [],
       "aws": []
     },
     "latency": {
-      "dev": [],
-      "aws": []
+      "dev": [0.001043, 0.001983, 0.012937],
+      "aws": [0.003994, 0.004834, 0.039424]
     },
     "dloc": -99
   }
