--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Node.js Backend to EC2
 on:
   push:
     branches:
-      - main  # or your deployment branch
+      - main
 
 jobs:
   deploy:
@@ -23,9 +23,11 @@ jobs:
     - name: Deploy to EC2
       run: |
         ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-          cd ~/your-app-dir || git clone https://github.com/your-user/your-repo.git your-app-dir && cd your-app-dir
+          cd ~/1380-stencil
           git pull origin main
           npm install
-          pm2 stop all || true
-          pm2 start index.js --name your-app
+          pm2 stop dist-node || true
+          pm2 start distribution.js --name dist-node -- --ip 127.0.0.1 --port 1234
+          pm2 save
         EOF
+
